--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
   camera: ^0.8.1
   image: ^3.0.2
   sqflite: ^2.0.0+3
+  image_picker: ^0.7.4
 
 dev_dependencies:
   flutter_test:
